export const snapshot = {};

snapshot[`conditions > if [ "\$a" -eq 10 ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "-eq",
                type: "Word",
              },
              {
                text: "10",
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > if [ "\$a" -ne 10 ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "-ne",
                type: "Word",
              },
              {
                text: "10",
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > [ "\$a" -gt 10 ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "-gt",
                type: "Word",
              },
              {
                text: "10",
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > if [ "\$a" -ge 10 ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "-ge",
                type: "Word",
              },
              {
                text: "10",
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > [ "\$a" -lt 10 ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "-lt",
                type: "Word",
              },
              {
                text: "10",
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > if [ "\$a" -le 10 ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "-le",
                type: "Word",
              },
              {
                text: "10",
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > if [ "\$a" == 10 ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "==",
                type: "Word",
              },
              {
                text: "10",
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > if [ "\$a" != 10 ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "!=",
                type: "Word",
              },
              {
                text: "10",
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > if [ ! "\$a" = 10 ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                text: "!",
                type: "Word",
              },
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "=",
                type: "Word",
              },
              {
                text: "10",
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > if [ -z "\$a" ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                text: "-z",
                type: "Word",
              },
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > if [ -n "\$a" ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                text: "-n",
                type: "Word",
              },
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > if [ -d "\$a" ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                text: "-d",
                type: "Word",
              },
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > if [ -f "\$a" ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                text: "-f",
                type: "Word",
              },
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > if [ -r "\$a" ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                text: "-r",
                type: "Word",
              },
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > if [ -w "\$a" ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                text: "-w",
                type: "Word",
              },
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > if [ -x "\$a" ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                text: "-x",
                type: "Word",
              },
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > while [ "\$a" -le 10 ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "-le",
                type: "Word",
              },
              {
                text: "10",
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      do: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "While",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > until [ "\$a" -ge 10 ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                expansion: [
                  {
                    loc: {
                      end: 2,
                      start: 1,
                    },
                    parameter: "a",
                    type: "ParameterExpansion",
                  },
                ],
                text: '"\$a"',
                type: "Word",
              },
              {
                text: "-ge",
                type: "Word",
              },
              {
                text: "10",
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      do: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "Until",
    },
  ],
  type: "Script",
}
`;

snapshot[`conditions > if [ "\$(command)" -eq 1 ] 1`] = `
{
  commands: [
    {
      clause: {
        commands: [
          {
            name: {
              text: "[",
              type: "Word",
            },
            suffix: [
              {
                expansion: [
                  {
                    command: "command",
                    commandAST: {
                      commands: [
                        {
                          name: {
                            text: "command",
                            type: "Word",
                          },
                          type: "Command",
                        },
                      ],
                      type: "Script",
                    },
                    loc: {
                      end: 10,
                      start: 1,
                    },
                    type: "CommandExpansion",
                  },
                ],
                text: '"\$(command)"',
                type: "Word",
              },
              {
                text: "-eq",
                type: "Word",
              },
              {
                text: "1",
                type: "Word",
              },
              {
                text: "]",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      then: {
        commands: [
          {
            name: {
              text: "echo",
              type: "Word",
            },
            suffix: [
              {
                text: "1",
                type: "Word",
              },
            ],
            type: "Command",
          },
        ],
        type: "CompoundList",
      },
      type: "If",
    },
  ],
  type: "Script",
}
`;
